--- a/estilo/style.css
+++ b/estilo/style.css
@@ -32,7 +32,7 @@ body{
 
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
-
+   
 
 }
 a.externo::after{
@@ -195,11 +195,18 @@ main img{
     padding: 10px;
     border-radius: 10px;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.342);
+    text-decoration: none;
  }
  aside > ul{
+    
     list-style-position: inside;
     columns: 2;
     list-style-type: '\2714\00A0\00A0';
+    
+
+ }
+abbr {
+    text-decoration: none;
 
  }
  aside > h3{
@@ -212,6 +219,8 @@ main img{
 
 
  }
+
+
 footer{
     background-color: var(--cor5);
     color: white;
